# v8-1.2

./: CMakeLists.txt
src/: frames.h  globals.h  objects.cc  objects.h  platform-macos.cc
test/: main.cc
test/cctest/: cctest.cc
tools/: js2c.py  jsmin.py
